# barneshut-galois

./: .gitignore  CMakeLists.txt  image.ppm
apps/: CMakeLists.txt
apps/10_barneshutold/: CMakeLists.txt
apps/11_barneshut/: Barneshut.cpp  CMakeLists.txt  Octree.h  Point.h
apps/12_barneshutclean/: Barneshut.cpp  CMakeLists.txt  f_AdvanceBodies.h  f_ComputeForces.h
apps/13_barneshutorderedblocked/: CMakeLists.txt
apps/14_barneshutpointblocked/: CMakeLists.txt  f_BodyBlocksBuild.h
apps/21_raytracer/: main.cpp  object.h
apps/22_raytracerclean/: CMakeLists.txt  ray.h  scene.h  vec.h
apps/23_raytracergalois/: CMakeLists.txt  f_RayTrace.h  image.h  main.cpp
apps/24_raytracerbvh/: CMakeLists.txt  bounding_box.h  bvh.h  f_RayTrace.h  main.cpp  object.h  ray.h  scene.h
apps/25_raytracerstructured/: CMakeLists.txt  Completeness.h  Config.cpp  f_ClampImage.h  f_RayTrace.h  main.cpp  scene.h
apps/25_raytracerstructured/structs/: All.h  BVHNode.cpp  BVHNode.h  BVHTree.h  Box.cpp  Box.h  CMakeLists.txt  Camera.cpp  Object.cpp  Object.h  Pixel.h  Ray.cpp  Ray.h  UID.h
apps/26_raytraceroldblocked/: CMakeLists.txt  Config.cpp  Config.h  f_RayTrace.h  main.cpp  scene.h
apps/26_raytraceroldblocked/structs/: BVHNode.cpp  BVHNode.h  BVHTree.cpp  BVHTree.h  CMakeLists.txt  Pixel.cpp
apps/27_raytracerblocked/: CMakeLists.txt  Config.cpp  Config.h  f_CastRays.h  f_InitRNG.h  f_PrimaryRayGen.h  f_RayTrace.h  f_ReduceRays.h  main.cpp  scene.h
apps/27_raytracerblocked/structs/: BVHNode.cpp  BVHNode.h  BVHTree.cpp  BVHTree.h  CMakeLists.txt  Image.cpp  Image.h  Pixel.cpp  Pixel.h  Ray.cpp  Ray.h  Sphere.cpp  UID.cpp
apps/28_raytracernotblocked/: CMakeLists.txt  Config.cpp  Config.h  Rng.h  f_CastRays.h  f_PrimaryRayGen.h  f_ReduceRays.h  f_SpatialSortBlocks.h  main.cpp  scene.h  sorting_traits.h
apps/28_raytracernotblocked/structs/: BVHNode.h  (+9 more)
apps/barneshut/: Barneshut.cpp  BoundingBox.h  CMakeLists.txt  Octree.h  Point.h  cgal.h  config.h  f_AdvanceBodies.h  f_BlockedComputeForces.h  f_BodyBlocksBuild.h  f_BuildOctree.h  f_CleanComputeForces.h  f_ComputeCenterOfMass.h  f_ComputeForces.h  f_ReduceBoxes.h  utilities.h
apps/barneshutclean/: Octree.h
apps/barneshutorderedblocked/: Barneshut.cpp  Octree.h  f_ReduceBoxes.h
apps/blockedbarneshut/: Barneshut.cpp  CMakeLists.txt  Octree.h  f_BlockedComputeForces.h  f_BuildOctree.h  f_ComputeForces.h
apps/blockedraytracer/: CMakeLists.txt  f_BlockedRayTrace.h  f_RayTrace.h  main.cpp  scene.h
apps/bvhraytracer/: CMakeLists.txt  bounding_box.h  bvh.h  f_ClampImage.h  f_RayTrace.h  main.cpp  object.h  scene.h  tmp.h  vec.h
apps/cleanbarneshut/: Barneshut.cpp  CMakeLists.txt  f_CleanComputeForces.h
apps/cleanraytracer/: main.cpp  scene.h
apps/custom-barneshut/: Barneshut.h  CMakeLists.txt  Octree.h  f_AdvanceBodies.h  f_BuildOctree.h  f_ComputeCenterOfMass.h  main.cpp
apps/galoisraytracer/: CMakeLists.txt  f_RayTrace.h  image.h  main.cpp  object.h  ray.h  scene.h  vec.h
apps/helloworld/: CMakeLists.txt  helloworld.cpp
apps/octreeraytracer/: CMakeLists.txt  boundingbox.h  main.cpp  object.h  octree.h  octreeinternal.cpp  octreeinternal.h  octreeleaf.h  paper.cpp  point.h  ray.h  scene.h  sphere.h  vec.h
apps/oldbarneshut/: CMakeLists.txt
apps/orderedblockedbarneshut/: Barneshut.cpp  BoundingBox.h  CMakeLists.txt  f_BlockedComputeForces.h  f_BuildOctree.h  f_ComputeCenterOfMass.h
apps/originalraytracer/: CMakeLists.txt  vec.h
apps/pcosta/: Barneshut.cpp  BoundingBox.h  CMakeLists.txt  Octree.h
apps/pointblockedbarneshut/: Barneshut.cpp  CMakeLists.txt  Octree.h  Point.h  f_BlockedComputeForces.h  f_CleanComputeForces.h
apps/pointcorrelation/: CMakeLists.txt  boundingbox.h  cgal.h  kdtree-node.h  kdtree.h  main.cpp  ninja.h  point.h  utilities.h
apps/raytracer/: CMakeLists.txt  main.cpp  object.h  ray.h  scene.h  sphere.h  vec.h
apps/raytracerbvh/: bvh.h  f_RayTrace.h
apps/raytracergalois/: ray.h
(+49 files in other folders)
