add_subdirectory(barneshut)
#add_subdirectory(cleanbarneshut)
#add_subdirectory(pointblockedbarneshut)
add_subdirectory(orderedblockedbarneshut)
#add_subdirectory(pcosta)
#add_subdirectory(oldbarneshut)
#add_subdirectory(originalraytracer)
add_subdirectory(cleanraytracer)
add_subdirectory(galoisraytracer)
#add_subdirectory(blockedraytracer)
add_subdirectory(bvhraytracer)
add_subdirectory(pointcorrelation)
