#add_subdirectory(10_barneshutold)
#add_subdirectory(11_barneshut)
add_subdirectory(12_barneshutclean)
add_subdirectory(13_barneshutorderedblocked)
add_subdirectory(14_barneshutpointblocked)

#add_subdirectory(21_raytracer)
#add_subdirectory(22_raytracerclean)
add_subdirectory(23_raytracergalois)
add_subdirectory(24_raytracerbvh)
add_subdirectory(25_raytracerstructured)
#add_subdirectory(26_raytraceroldblocked)
add_subdirectory(27_raytracerblocked)
add_subdirectory(28_raytracernotblocked)

add_subdirectory(pointcorrelation)
